protocols/tests/adders/adder_d1/add_incorrect.out
error: Thread 1 attempted conflicting assignment to 'a': current=1, new=4
   ┌─ adders/adder_d1/add_d1.prot:33:3
   │
33 │   DUT.a := a;
   │   ^^^^^^^^^^^ Thread 1 attempted conflicting assignment to 'a': current=1, new=4

